# yotagrabber

./: README.md  pyproject.toml  renovate.json
.github/: FUNDING.yml
.github/workflows/: update.yml
output/: 4runner.csv  4runner.json  4runner_raw.json.zst  4runner_raw.parquet  86.csv  86_raw.parquet  README.md  bz4x.csv  bz4x_raw.parquet  camry.csv  camry.json  camry_raw.json  camry_raw.json.zst  camry_raw.parquet  camryhybrid.csv  camryhybrid.json  camryhybrid_raw.json.zst  camryhybrid_raw.parquet  corolla.csv  corolla.json  corolla_raw.json.zst  corolla_raw.parquet  corollacross.csv  corollacross.json  corollacross_raw.json.zst  corollacross_raw.parquet  corollacrosshybrid.csv  corollacrosshybrid.json  corollacrosshybrid_raw.json.zst  corollacrosshybrid_raw.parquet  corollahatchback.csv  corollahatchback.json  corollahatchback_raw.json.zst  corollahatchback_raw.parquet  corollahybrid.csv  corollahybrid.json  corollahybrid_raw.json.zst  corollahybrid_raw.parquet  grandhighlander.csv  grandhighlander_raw.parquet  (+69 more)
src/yotagrabber/: config.py  models.py  vehicles.py
src/yotagrabber/data/: common_user_agents.json
src/yotagrabber/graphql/: models.graphql  vehicles.graphql
