[tool.poetry]
name = "yotagrabber"
version = "0.1.0"
description = ""
authors = ["Major Hayden <major@mhtx.net>"]
readme = "README.md"
packages = [{include = "yotagrabber", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.0"
pyarrow = "^11.0.0"
requests = "^2.29.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.2.0"
ipython = "^8.12.0"
pytest-sugar = "^0.9.7"
pytest = "^7.3.1"
pytest-xdist = "^3.2.1"
pytest-cov = "^4.0.0"
pandas-stubs = "^2.0.0.230412"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
update_models = 'yotagrabber.models:update_models'
update_vehicles = 'yotagrabber.vehicles:update_vehicles'